2017-03-14  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LocalTest.cpp: add empty overriden functions.
	* src/client/LocalTest.cpp: add empty class.

2017-03-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LoadingBar.cpp (step): implement function.
	* src/client/LoadingBar_Test.cpp (stepSize): test implemented.
	* src/client/LoadingBar.cpp (stepSize): implement getter.
	* media/layouts/loading_bar.layout: fix the windows placements.

2017-03-09  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/loading_bar.layout: add the LoadingBar layout file.

	* src/client/LoadingBar_Test.cpp (vectorSize): add a unit test to
	LoadingBar.

	* src/client/LoadingBar.cpp (LoadingBar): create an empty class.

	* ROADMAP: postpone overlays in highter resolution bug.

2017-02-24  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ConfirmationDialog.cpp (onCancel): move event handler
	from ModalDialog.cpp
	* src/client/ConfirmationDialog.cpp (onOk): move event handler
	from ModalDialog.cpp

	* src/client/ConfirmationDialog.hpp (ConfirmationDialog); create the
	empty class.

	* src/client/ModalDialog.cpp (exec): uncomment the loop and add a
	FIXME comment.

	* src/client/ModalDialog.cpp (closeDialog): set returnValue and
	stop waiting.
	* src/client/ModalDialog.hpp (returnValue): add the exec() function
	return value as member.

2017-02-20  Jérôme Pasquier  <rainbru@free.fr>

	* media/layouts/modal_dialog.layout: add the cancel button.
	* src/client/ModalDialog.hpp (ModalDialog): add the title parameter
	to constructor.
	* media/layouts/modal_dialog.layout: add the modal dialog layout.

2017-02-06  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ModalDialog.cpp (exec): directly call GameEngine::
	drawOverlays.
	* src/client/GameEngine.hpp (overlayHandler): now call drawOverlays().
	* src/client/GameEngine.hpp (drawOverlays): new public method to be
	called from ModalDialog.
	* src/client/ModalDialog.cpp (exec): parameter is now a pointer to
	GameEngine.
