@@ -139,6 +139,8 @@ Error is fixed, was due to a src/services/Services.hpp old code
   - tmpMsg is drawn from GameEngine::drawOverlays()
   - logo, version and stats are drawn in MainMenu::drawOverlay()
 **** TODO Start to handle Local test
+     CLOCK: [2017-03-17 ven. 19:19]--[2017-03-17 ven. 19:54] =>  0:35
+     CLOCK: [2017-03-17 ven. 17:00]--[2017-03-17 ven. 17:47] =>  0:47
      CLOCK: [2017-03-17 ven. 15:24]--[2017-03-17 ven. 16:09] =>  0:45
      CLOCK: [2017-03-10 ven. 16:11]--[2017-03-10 ven. 16:45] =>  0:34
      CLOCK: [2017-03-10 ven. 14:08]--[2017-03-10 ven. 14:47] =>  0:39
@@ -166,7 +168,8 @@ Error is fixed, was due to a src/services/Services.hpp old code
     - [X] instanciate LocalTest
     - [X] set current gamestate to LocalTest
   - [ ] Implement LocalTest overriden functions
-  - [ ] Create and load the CEGUI layout file
+  - [-] Create and load the CEGUI layout file
+    - [X] implement GameState::unloadLayout()
     - [ ] Must choose to generate a new world or select an existing one
       Try to use a TabControl with /NewWorld/ and /ExistingWorld/ tabs
       http://cegui.org.uk/wiki/Sample_code_for_all_Widgets#TabControl
