@@ -37,7 +37,8 @@ OVERALL TODO
    Update VERSION and REVISION in CMakeLists.txt
    
 * v0.0.5-255 (24 Jan. 2017 - ???) SLOC ?,??? FT ??:?? UT ?
-- (7) Start to implement LocalTest game state
+- (8) Start to implement LocalTest layout file
+- Start to implement LocalTest game state
 - Implement LoadingBar::step function
 - Create the LoadingBar layout file
 - Create the LoadingBar empty class
