@@ -700,8 +700,6 @@ GameEngine::getRenderSystem()const
 void
 GameEngine::toLocalTest()
 {
-  mCurrentState->exit(this);
-  mLocalTest->enter(this);
   setCurrentState(mLocalTest);
 }
 
