@@ -141,7 +141,6 @@ MainMenu::exit(GameEngine* ge)
   ge->getOgreRenderer()->destroyGeometryBuffer(*mFpsGeometry);
 
   CEGUI::WindowManager::getSingleton().destroyWindow(mMenuWindow);
-  
 }
 
 /* The callback for the menu.layout's exit button
